--- a/wordpress.apache2.conf
+++ b/wordpress.apache2.conf
@@ -12,5 +12,11 @@
         AllowOverride Limit Options FileInfo
         DirectoryIndex index.php
         Require all granted
+        RewriteEngine On
+         RewriteBase /
+         RewriteRule ^index\.php$ - [L]
+         RewriteCond %{REQUEST_FILENAME} !-f
+         RewriteCond %{REQUEST_FILENAME} !-d
+         RewriteRule . /index.php [L]
     </Directory>
 </VirtualHost>
