--- a/wordpress.apache2.conf
+++ b/wordpress.apache2.conf
@@ -3,13 +3,9 @@
     ServerName _
     DocumentRoot /var/www
 
-    # Custom log files, to differentiate from root server
-    ErrorLog ${APACHE_LOG_DIR}/error-wordpress.log
-    CustomLog ${APACHE_LOG_DIR}/access-wordpress.log combined
-
     <Directory /var/www>
         Options FollowSymLinks
-        AllowOverride Limit Options FileInfo
+        AllowOverride All
         DirectoryIndex index.php
         Require all granted
         RewriteEngine On
@@ -19,4 +15,9 @@
          RewriteCond %{REQUEST_FILENAME} !-d
          RewriteRule . /index.php [L]
     </Directory>
+    
+    # Custom log files, to differentiate from root server
+    ErrorLog ${APACHE_LOG_DIR}/error-wordpress.log
+    CustomLog ${APACHE_LOG_DIR}/access-wordpress.log combined
+    
 </VirtualHost>
